--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -24,7 +24,7 @@
     #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
 
 - title: 'Fine-Grained Expression Manipulation via structured latent Space'
-  date:  'Jul. 2020
+  date:  'Jul. 2020'
   imgurl: '/images/projects/2020/tang2020finegrained.png'
   selected: true
   authors:
