--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -2,14 +2,14 @@
   title: "Research Assistant @ NTU"
   desc:  "Facial Action Unit Recognition, Face Alignment"
   host:
-    name:  "<a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>"
+    name:  "<a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>"
     role: "Advisor"
   brief: true
 - date:  "Sept. 2015 - "
   title: "Ph.D. candidate @ SJTU"
   desc:  "Face Analysis, Deep Learning"
   host:
-    name: "<a href='http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'>Prof. Lizhuang Ma</a>"
+    name: "<a href='http://dmcv.sjtu.edu.cn/people'>Prof. Lizhuang Ma</a>"
     role: "Advisor"
   brief: true
 - date:  "Mar. 2015 - Sept. 2016"
