--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -273,7 +273,7 @@
 - title: 'Saliency Detection by Deep Network with Boundary Refinement and Global Context'
   date:  'Jul. 2018'
   imgurl: '/images/projects/2018/tan2018saliency.png'
-  selected: true
+  selected: false
   authors:
     - name: Xin Tan
       url:  false
@@ -302,7 +302,7 @@
 - title: 'Multi-Path Feature Fusion Network for Saliency Detection'
   date:  'Jul. 2018'
   imgurl: '/images/projects/2018/zhu2018multi.png'
-  selected: true
+  selected: false
   authors:
     - name: Hengliang Zhu
       url:  false
@@ -348,8 +348,8 @@
   tags:
     #- name: 'arXiv'
     #  url:  'https://arxiv.org/abs/1608.00207'
-    #- name: 'pdf'
-    #  url:  'https://zhiwenshao.github.io/pdfs/projects/2018/zhu2018multi.pdf'
+    - name: 'pdf'
+      url:  'https://zhiwenshao.github.io/pdfs/projects/2018/hao2018facial.pdf'
     #- name: 'site'
     #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'    
 
