--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -5,7 +5,7 @@
     name:  "<a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>"
     role: "Advisor"
   brief: true
-- date:  "Sept. 2015 - "
+- date:  "Sept. 2015 - Aug. 2020"
   title: "Ph.D. candidate @ SJTU"
   desc:  "Face Analysis, Deep Learning"
   host:
