--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Aug. 2020:</strong> Our paper <strong>JAA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by International Journal of Computer Vision."
+- normal:
     content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by IEEE Transactions on Affective Computing."
 - normal:
     content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by ECCV 2018."
