--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,3 +1,7 @@
+- date:  "Aug. 2020 -"
+  title: "Tenure-Track Associate Professor @ CUMT"
+  desc:  "Computer Vision, Deep Learning"
+  brief: true
 - date:  "Nov. 2017 - Nov. 2018 "
   title: "Research Assistant @ NTU"
   desc:  "Facial Action Unit Recognition, Face Alignment"
