--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>Sept. 2020:</strong> I serve as a PC member in IJCAI 2021."
+    content:  "<strong>Sept. 2020:</strong> I serve as a PC member in AAAI 2021 and IJCAI 2021."
 - normal:
     content:  "<strong>Aug. 2020:</strong> Our paper <strong>JAA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by International Journal of Computer Vision."
 - normal:
