--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,7 @@
 - normal:
     content:  "<strong>Sept. 2020:</strong> I serve as a PC member in AAAI 2021 and IJCAI 2021."
 - normal:
-    content:  "<strong>Aug. 2020:</strong> Our paper <strong>J$\hat{\text{A}}$A-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by International Journal of Computer Vision."
+    content:  "<strong>Aug. 2020:</strong> Our paper <strong>J$$\backslash$hat{$\backslash$text{A}}$A-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by International Journal of Computer Vision."
 - normal:
     content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by IEEE Transactions on Affective Computing."
 - normal:
