--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -312,7 +312,7 @@
       url:  'http://dmcv.sjtu.edu.cn/people'  
   publisher:  'CISP-BMEI 2019'
   #status:   '(CCF B)'
-  place:   'in Suzhou, China'
+  place:   'in Huaqiao, China'
   desc: 'We propose a novel framework called FVNet for 3D front-view proposal generation and object detection from point clouds. It consists of two stages: generation of front-view proposals and estimation of 3D bounding box parameters. We first project point clouds onto a cylindrical surface to generate front-view feature maps which retains rich information. We then introduce a proposal generation network to predict 3D region proposals from the generated maps and further extrude objects of interest from the whole point cloud. Finally, we present another network to extract the point-wise features from the extruded object points and regress the final 3D bounding box parameters in the canonical coordinates.'
   tags:
     - name: 'arXiv'
